<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.javacadabra</groupId>
    <artifactId>reservasviaje</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Sistema de Reservas de Viaje - Parent</name>
    <description>Sistema de reservas de viaje con microservicios y Camunda Platform 8</description>

    <modules>
        <module>servicio-clientes</module>
        <module>servicio-vuelos</module>
        <module>servicio-hoteles</module>
        <module>servicio-alquiler-coches</module>
        <module>servicio-pagos</module>
        <module>servicio-reservas</module>
    </modules>

    <properties>
        <!-- Java & Encoding -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Spring Boot -->
        <spring-boot.version>3.5.6</spring-boot.version>

        <!-- Camunda -->
        <camunda-spring-boot.version>8.8.0</camunda-spring-boot.version>

        <!-- Base de Datos -->
        <h2.version>2.3.232</h2.version>

        <!-- Utilidades -->
        <lombok.version>1.18.36</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <commons-lang3.version>3.18.0</commons-lang3.version>

        <!-- Documentación -->
        <springdoc.version>2.7.0</springdoc.version>

        <!-- DDD -->
        <jmolecules.version>1.10.0</jmolecules.version>
        <jmolecules-integration.version>0.19.0</jmolecules-integration.version>

        <!-- Testing -->
        <testcontainers.version>1.20.4</testcontainers.version>
        <archunit.version>1.3.0</archunit.version>

        <!-- Plugins -->
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- ========================================== -->
            <!-- Spring Boot BOM -->
            <!-- ========================================== -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- ========================================== -->
            <!-- Camunda Platform 8 -->
            <!-- ========================================== -->
            <dependency>
                <groupId>io.camunda</groupId>
                <artifactId>camunda-spring-boot-starter</artifactId>
                <version>${camunda-spring-boot.version}</version>
            </dependency>

            <!-- ========================================== -->
            <!-- Base de Datos -->
            <!-- ========================================== -->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>

            <!-- ========================================== -->
            <!-- Utilidades -->
            <!-- ========================================== -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <!-- ========================================== -->
            <!-- JMolecules - DDD -->
            <!-- ========================================== -->

            <!-- JMolecules Core (versión 1.10.0) -->
            <dependency>
                <groupId>org.jmolecules</groupId>
                <artifactId>jmolecules-ddd</artifactId>
                <version>${jmolecules.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jmolecules</groupId>
                <artifactId>jmolecules-events</artifactId>
                <version>${jmolecules.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jmolecules</groupId>
                <artifactId>jmolecules-architecture</artifactId>
                <version>${jmolecules.version}</version>
            </dependency>

            <!-- JMolecules Integrations (versión 0.19.0) -->
            <dependency>
                <groupId>org.jmolecules.integrations</groupId>
                <artifactId>jmolecules-spring</artifactId>
                <version>${jmolecules-integration.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jmolecules.integrations</groupId>
                <artifactId>jmolecules-jpa</artifactId>
                <version>${jmolecules-integration.version}</version>
            </dependency>

            <!-- ========================================== -->
            <!-- Documentación -->
            <!-- ========================================== -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- ========================================== -->
            <!-- Testing -->
            <!-- ========================================== -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Spring Boot Maven Plugin -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <!-- Maven Compiler Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct-binding.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!-- Maven Surefire Plugin (Tests unitarios) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>

                <!-- Maven Failsafe Plugin (Tests de integración) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
